--- a/.gitignore
+++ b/.gitignore
@@ -132,3 +132,7 @@ Agent_ila/generated_f_prompt.json
 Agent_ila/qs.txt
 
 Agent_ila/misc/generated_f_prompt.json
+Agent_ila/embed/data_to_embed/witsml_queries_samp.jsonl
+Agent_ila/.DS_Store
+.DS_Store
+.DS_Store
